4 - mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      affinity:
          nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: for
                  operator: In
                  values:
                  - webserver      
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha.4
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
  labels:
    app: mongo-express-svc
spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
  - port: 8081
    nodePort: 30001
