6 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/adm"
        backend:
          service:
            name: mongo-express-svc
            port:
              number: 8081
